force-app/main/default/objects/Partner_Agreement_Product__c/Partner_Agreement_Product__c.object-meta.xml
<CustomObject>
    <label>Partner Agreement Product</label>
    <nameField>
        <displayFormat>PAP-{00000}</displayFormat>
        <label>Partner Agreement Products Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Agreement Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>