force-app/main/default/objects/Partner_Agreement_Product__c/fields/Approx_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Approx_Capacity__c</fullName>
    <label>Approx Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>