force-app/main/default/objects/Partner_Agreement_Product__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>