force-app/main/default/objects/Partner_Agreement_Product__c/fields/Free_Goods_Requested_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Free_Goods_Requested_Color_Code__c</fullName>
    <label>Free Goods Requested Color Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>