force-app/main/default/objects/Partner_Agreement_Product__c/fields/Free_Goods_Requested_in_Cases__c.field-meta.xml
<CustomField>
    <fullName>Free_Goods_Requested_in_Cases__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Free Goods Requested in Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>