force-app/main/default/objects/Partner_Agreement_Product__c/fields/Full_Size_Camrack__c.field-meta.xml
<CustomField>
    <fullName>Full_Size_Camrack__c</fullName>
    <label>Full Size Camrack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>