force-app/main/default/objects/Partner_Agreement_Product__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>