force-app/main/default/objects/Partner_Agreement_Product__c/fields/Image_Location__c.field-meta.xml
<CustomField>
    <fullName>Image_Location__c</fullName>
    <label>Image Location</label>
    <type>Url</type>
</CustomField>