force-app/main/default/objects/Partner_Agreement_Product__c/fields/Initial_Lid_Order_In_Cases__c.field-meta.xml
<CustomField>
    <fullName>Initial_Lid_Order_In_Cases__c</fullName>
    <label>Initial Lid Order In Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>