force-app/main/default/objects/Partner_Agreement_Product__c/fields/Other_Case_Pack__c.field-meta.xml
<CustomField>
    <fullName>Other_Case_Pack__c</fullName>
    <label>Other Case Pack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>