force-app/main/default/objects/Partner_Agreement_Product__c/fields/Outside_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Outside_Diameter__c</fullName>
    <label>Outside Diameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>