force-app/main/default/objects/Partner_Agreement_Product__c/fields/Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agreement__c</fullName>
    <label>Partner Agreement</label>
    <referenceTo>Partner_Agreement__c</referenceTo>
    <relationshipLabel>Partner Agreement Products</relationshipLabel>
    <relationshipName>Partner_Agreement_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>