force-app/main/default/objects/Partner_Agreement_Product__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE(Image_Location__c,&#39;&#39;,50, 50)</formula>
    <inlineHelpText>FORMULA: Displays the image based on the Image Location URL provided</inlineHelpText>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>